--- a/app/src/main/res/layout/company_outlinebox_phone_number_layout.xml
+++ b/app/src/main/res/layout/company_outlinebox_phone_number_layout.xml
@@ -67,6 +67,7 @@
     </LinearLayout>
 
     <TextView
+        android:visibility="gone"
         android:id="@+id/companyhintTV"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
