--- a/app/src/main/res/layout/monthly_processing_volume_layout.xml
+++ b/app/src/main/res/layout/monthly_processing_volume_layout.xml
@@ -1,16 +1,16 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    xmlns:app="http://schemas.android.com/apk/res-auto">
+    android:layout_height="wrap_content">
 
     <LinearLayout
         android:id="@+id/volhintdHolderLL"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_marginTop="@dimen/_10sdp"
         android:background="@drawable/outline_box_unfocused"
         android:gravity="center"
-        android:layout_marginTop="@dimen/_10sdp"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="parent">
@@ -18,48 +18,45 @@
         <LinearLayout
             android:layout_width="wrap_content"
             android:layout_height="@dimen/_25sdp"
-            android:gravity="center"
-            android:layout_marginStart="@dimen/_15sdp">
+            android:layout_marginStart="@dimen/_15sdp"
+            android:gravity="center">
 
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="$"
-                android:textColor="@color/primary_green"
                 android:layout_marginStart="5dp"
                 android:fontFamily="@font/opensans_bold"
-                android:textSize="@dimen/_16ssp"/>
+                android:text="$"
+                android:textColor="@color/primary_green"
+                android:textSize="@dimen/_16ssp" />
 
             <View
                 android:layout_width="1.5dp"
                 android:layout_height="wrap_content"
-                android:background="@color/light_gray"
                 android:layout_marginStart="@dimen/_5sdp"
-                />
+                android:background="@color/light_gray" />
 
         </LinearLayout>
-
 
         <EditText
             android:id="@+id/volET"
             android:layout_width="match_parent"
             android:layout_height="55dp"
             android:layout_gravity="center"
-            android:inputType="number|textNoSuggestions"
-            android:padding="14dp"
-            android:hint="Enter the amount"
             android:background="@android:color/transparent"
+            android:digits="0123456789"
+            android:fontFamily="@font/opensans_semibold"
+            android:hint="@string/enter_the_amount"
+            android:imeOptions="actionNext"
+            android:inputType="number|textNoSuggestions"
+            android:maxLength="@string/maxlength"
+            android:maxLines="1"
+            android:padding="14dp"
+            android:singleLine="true"
             android:textColor="@color/primary_black"
             android:textColorHint="@color/light_gray"
-            android:textSize="@dimen/_12ssp"
-            android:singleLine="true"
-            android:maxLines="1"
-            android:maxLength="7"
             android:textCursorDrawable="@drawable/cursor_color"
-            android:fontFamily="@font/opensans_semibold"
-            android:digits="0123456789"
-            android:imeOptions="actionNext"/>
-
+            android:textSize="@dimen/_12ssp" />
 
     </LinearLayout>
 
@@ -70,14 +67,41 @@
         android:layout_marginStart="12dp"
         android:layout_marginTop="8dp"
         android:background="@android:color/white"
+        android:fontFamily="@font/opensans_semibold"
         android:paddingStart="4dp"
         android:paddingEnd="4dp"
-        android:textSize="@dimen/text_size_11sp"
-        android:fontFamily="@font/opensans_semibold"
         android:text="Monthly Processing Volume"
         android:textColor="@color/primary_black"
+        android:textSize="@dimen/text_size_11sp"
         app:layout_constraintBottom_toTopOf="@+id/volhintdHolderLL"
         app:layout_constraintStart_toStartOf="@+id/volhintdHolderLL"
-        app:layout_constraintTop_toTopOf="@+id/volhintdHolderLL" />
+        app:layout_constraintTop_toTopOf="@+id/volhintdHolderLL"
+        android:visibility="gone"/>
 
+
+    <LinearLayout
+        android:id="@+id/volumeErrorLL"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="@dimen/_5sdp"
+        android:gravity="center"
+        android:orientation="horizontal"
+        android:visibility="gone"
+        app:layout_constraintTop_toBottomOf="@id/volhintdHolderLL">
+
+        <ImageView
+            android:layout_width="@dimen/_12sdp"
+            android:layout_height="@dimen/_12sdp"
+            android:src="@drawable/ic_erro" />
+
+        <TextView
+            android:id="@+id/volumeErrorTV"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="@dimen/_10sdp"
+            android:fontFamily="@font/opensans_regular"
+            android:text="Field Required"
+            android:textColor="@color/error_red"
+            android:textSize="@dimen/_10ssp" />
+    </LinearLayout>
 </androidx.constraintlayout.widget.ConstraintLayout>
