--- a/app/src/main/res/layout/activity_business_batch_payout_search.xml
+++ b/app/src/main/res/layout/activity_business_batch_payout_search.xml
@@ -89,141 +89,52 @@
         </androidx.cardview.widget.CardView>
     </LinearLayout>
 
-    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
-        android:id="@+id/refreshLayout"
+    <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="wrap_content"
+        android:orientation="horizontal">
 
-        <androidx.core.widget.NestedScrollView
-            android:id="@+id/nestedSV"
+        <TextView
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:fillViewport="true">
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="@dimen/_20sdp"
+            android:layout_marginTop="@dimen/_11sdp"
+            android:layout_weight="1"
+            android:fontFamily="@font/opensans_bold"
+            android:textColor="@color/primary_black"
+            android:textSize="@dimen/_12ssp" />
 
-            <LinearLayout
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="@dimen/_11sdp"
+            android:layout_marginRight="@dimen/_21sdp"
+            android:fontFamily="@font/opensans_bold"
+            android:text="@string/cyn"
+            android:textColor="@color/primary_black"
+            android:textSize="@dimen/_9ssp" />
+    </LinearLayout>
+
+    <androidx.cardview.widget.CardView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginHorizontal="@dimen/_11sdp"
+        android:layout_marginTop="@dimen/_6sdp"
+        app:cardCornerRadius="@dimen/_10sdp">
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginHorizontal="@dimen/_11sdp"
+            android:layout_marginTop="@dimen/_8sdp"
+            android:orientation="vertical">
+
+            <androidx.recyclerview.widget.RecyclerView
                 android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:orientation="vertical">
+                android:layout_height="wrap_content">
 
-                <TextView
-                    android:id="@+id/pendingTV"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_marginStart="@dimen/_21sdp"
-                    android:layout_marginTop="@dimen/_14sdp"
-                    android:background="#f2f4f5"
-                    android:fontFamily="@font/opensans_bold"
-                    android:gravity="center_vertical"
-                    android:text="Pending"
-                    android:textColor="@color/primary_black"
-                    android:textSize="@dimen/_12ssp"
-                    android:visibility="gone" />
+            </androidx.recyclerview.widget.RecyclerView>
 
-                <LinearLayout
-                    android:id="@+id/layoutLLPending"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_marginStart="@dimen/_11sdp"
-                    android:layout_marginTop="@dimen/_10sdp"
-                    android:layout_marginEnd="@dimen/_11sdp"
-                    android:orientation="vertical"
-                    android:visibility="gone">
-
-                    <androidx.cardview.widget.CardView
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:layout_marginBottom="@dimen/_2sdp"
-                        app:cardCornerRadius="@dimen/_10sdp">
-
-                        <com.greenbox.coyni.utils.ExpandableHeightRecyclerView
-                            android:id="@+id/transactionListPendingRV"
-                            android:layout_width="match_parent"
-                            android:layout_height="wrap_content"
-                            android:layout_marginTop="10dp"
-                            android:clipToPadding="false"
-                            android:divider="@color/white"
-                            android:nestedScrollingEnabled="false"
-                            android:overScrollMode="never"
-                            android:scrollbars="none" />
-                    </androidx.cardview.widget.CardView>
-                </LinearLayout>
-
-                <LinearLayout
-                    android:id="@+id/layoutLLposted"
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:layout_marginStart="@dimen/_11sdp"
-                    android:layout_marginTop="@dimen/_11sdp"
-                    android:layout_marginEnd="@dimen/_11sdp"
-                    android:orientation="vertical"
-                    android:visibility="gone">
-
-
-                    <!--                <androidx.cardview.widget.CardView-->
-                    <!--                    android:layout_width="match_parent"-->
-                    <!--                    android:layout_height="wrap_content"-->
-                    <!--                    android:layout_marginBottom="@dimen/_2sdp"-->
-                    <!--                    app:cardCornerRadius="@dimen/_10sdp"-->
-                    <!--                    app:cardBackgroundColor="@color/white">-->
-
-                    <com.greenbox.coyni.utils.ExpandableHeightRecyclerView
-                        android:id="@+id/transactionListPostedRV"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:clipToPadding="false"
-                        android:nestedScrollingEnabled="false"
-                        android:overScrollMode="never"
-                        android:scrollbars="none" />
-                    <!--                </androidx.cardview.widget.CardView>-->
-                </LinearLayout>
-
-                <TextView
-                    android:id="@+id/noTransactions"
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:fontFamily="@font/opensans_regular"
-                    android:gravity="center"
-                    android:text="You have no transactions"
-                    android:textColor="@color/dark_grey"
-                    android:textSize="@dimen/_10ssp"
-                    android:visibility="gone" />
-
-                <ProgressBar
-                    android:id="@+id/progressBarLoadMore"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:visibility="gone" />
-
-                <TextView
-                    android:id="@+id/loadMoreTV"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_marginTop="@dimen/_12sdp"
-                    android:fontFamily="@font/opensans_regular"
-                    android:gravity="center"
-                    android:text="Load More"
-                    android:textColor="@color/primary_green"
-                    android:textSize="@dimen/_10ssp"
-                    android:visibility="gone" />
-
-                <TextView
-                    android:id="@+id/noMoreTransactions"
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:layout_marginTop="@dimen/_12sdp"
-                    android:fontFamily="@font/opensans_regular"
-                    android:gravity="center"
-                    android:text="You have no more transactions"
-                    android:textColor="@color/dark_grey"
-                    android:textSize="@dimen/_10ssp"
-                    android:visibility="gone" />
-
-                <View
-                    android:layout_width="match_parent"
-                    android:layout_height="@dimen/_30sdp" />
-            </LinearLayout>
-
-        </androidx.core.widget.NestedScrollView>
-    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
-
+        </LinearLayout>
+    </androidx.cardview.widget.CardView>
 </LinearLayout>
