--- a/app/src/main/res/layout/activity_business_sales_order.xml
+++ b/app/src/main/res/layout/activity_business_sales_order.xml
@@ -254,7 +254,46 @@
                                 android:textColor="@color/primary_black"
                                 android:textSize="@dimen/_11ssp" />
                         </LinearLayout>
+                        <LinearLayout
+                            android:layout_width="match_parent"
+                            android:layout_height="match_parent"
+                            android:orientation="horizontal"
+                            android:paddingLeft="@dimen/_11sdp"
+                            android:paddingTop="@dimen/_8sdp"
+                            android:visibility="gone"
+                            android:paddingRight="@dimen/_11sdp"
+                            android:paddingBottom="@dimen/_11sdp">
 
+                            <TextView
+                                android:layout_width="match_parent"
+                                android:layout_height="wrap_content"
+                                android:layout_weight="1"
+                                android:fontFamily="@font/opensans_regular"
+                                android:text="Reserve Amount"
+                                android:textColor="@color/dark_grey"
+                                android:textSize="@dimen/_11ssp" />
+
+                            <TextView
+
+                                android:layout_width="match_parent"
+                                android:layout_height="wrap_content"
+                                android:layout_marginRight="@dimen/_4sdp"
+                                android:layout_weight="1"
+                                android:fontFamily="@font/opensans_semibold"
+                                android:gravity="right"
+                                android:text="5.00"
+                                android:textColor="@color/primary_black"
+                                android:textSize="@dimen/_11ssp" />
+
+                            <TextView
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:fontFamily="@font/opensans_semibold"
+                                android:gravity="right"
+                                android:text="CYN"
+                                android:textColor="@color/primary_black"
+                                android:textSize="@dimen/_11ssp" />
+                        </LinearLayout>
                         <LinearLayout
                             android:layout_width="match_parent"
                             android:layout_height="match_parent"
@@ -342,12 +381,12 @@
                             android:layout_marginRight="@dimen/_11sdp"
                             android:layout_marginBottom="@dimen/_11sdp"
                             android:background="@color/blue_light" />
+                        <ImageView
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_gravity="center"
+                            android:src="@drawable/ic_close" />
 
-                        <ProgressBar
-                            android:id="@+id/progressBarLoadMore"
-                            android:layout_width="match_parent"
-                            android:layout_marginTop="@dimen/_12sdp"
-                            android:layout_height="wrap_content" />
                         <TextView
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
