--- a/app/src/main/res/layout/activity_addcard.xml
+++ b/app/src/main/res/layout/activity_addcard.xml
@@ -270,6 +270,7 @@
                         </LinearLayout>
 
                         <LinearLayout
+                            android:id="@+id/layoutCvv"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
                             android:layout_marginLeft="@dimen/_5sdp"
