--- a/app/src/main/res/layout/verify_your_account.xml
+++ b/app/src/main/res/layout/verify_your_account.xml
@@ -77,6 +77,7 @@
 
                 <TextView
                     android:layout_width="match_parent"
+                    android:id="@+id/txv_verify_name"
                     android:layout_height="wrap_content"
                     android:fontFamily="@font/opensans_bold"
                     android:gravity="center_horizontal"
@@ -86,6 +87,7 @@
 
                 <TextView
                     android:layout_width="match_parent"
+                    android:id="@+id/txv_verify_description"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="@dimen/_11sdp"
                     android:fontFamily="@font/opensans_regular"
