--- a/app/src/main/res/layout/fragment_business_dashboard.xml
+++ b/app/src/main/res/layout/fragment_business_dashboard.xml
@@ -12,65 +12,65 @@
         android:background="@drawable/backgrndbtmcornrs"
         android:orientation="vertical">
 
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:background="@drawable/mask_group_16"
-                android:orientation="horizontal"
-                android:paddingStart="@dimen/_21sdp"
-                android:paddingTop="@dimen/_46sdp"
-                android:paddingEnd="@dimen/_21sdp"
-                android:paddingBottom="@dimen/_16sdp">
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:background="@drawable/mask_group_16"
+            android:orientation="horizontal"
+            android:paddingStart="@dimen/_21sdp"
+            android:paddingTop="@dimen/_46sdp"
+            android:paddingEnd="@dimen/_21sdp"
+            android:paddingBottom="@dimen/_16sdp">
 
-                <RelativeLayout
-                    android:id="@+id/rl_user_icon_layout"
-                    android:layout_width="@dimen/_50sdp"
-                    android:layout_height="@dimen/_50sdp"
-                    android:layout_gravity="center_vertical"
-                    android:background="@drawable/circle_bg">
-
-                    <ImageView
-                        android:id="@+id/iv_user_icon"
-                        android:layout_width="match_parent"
-                        android:layout_height="match_parent"
-                        android:contentDescription="@string/user_details"
-                        android:padding="2dp"
-                        android:scaleType="fitXY"
-                        android:src="@drawable/acct_profile"
-                        android:visibility="visible" />
-
-                    <TextView
-                        android:id="@+id/tv_user_icon_text"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_centerInParent="true"
-                        android:fontFamily="@font/opensans_bold"
-                        android:textColor="@color/primary_black"
-                        android:textSize="@dimen/_20sdp"
-                        android:visibility="gone" />
-
-                </RelativeLayout>
-
-                <TextView
-                    android:id="@+id/tv_user_name"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_gravity="center_vertical"
-                    android:layout_marginStart="@dimen/_9sdp"
-                    android:layout_weight="1"
-                    android:fontFamily="@font/opensans_semibold"
-                    android:text="@string/dba_name"
-                    android:textColor="@color/black"
-                    android:textSize="@dimen/_11ssp" />
+            <RelativeLayout
+                android:id="@+id/rl_user_icon_layout"
+                android:layout_width="@dimen/_50sdp"
+                android:layout_height="@dimen/_50sdp"
+                android:layout_gravity="center_vertical"
+                android:background="@drawable/circle_bg">
 
                 <ImageView
+                    android:id="@+id/iv_user_icon"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:contentDescription="@string/user_details"
+                    android:padding="2dp"
+                    android:scaleType="fitXY"
+                    android:src="@drawable/acct_profile"
+                    android:visibility="visible" />
+
+                <TextView
+                    android:id="@+id/tv_user_icon_text"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_gravity="center"
-                    android:layout_weight="1"
-                    android:scaleType="fitEnd"
-                    android:src="@drawable/ic_notifications" />
-            </LinearLayout>
+                    android:layout_centerInParent="true"
+                    android:fontFamily="@font/opensans_bold"
+                    android:textColor="@color/primary_black"
+                    android:textSize="@dimen/_20sdp"
+                    android:visibility="gone" />
+
+            </RelativeLayout>
+
+            <TextView
+                android:id="@+id/tv_user_name"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center_vertical"
+                android:layout_marginStart="@dimen/_9sdp"
+                android:layout_weight="1"
+                android:fontFamily="@font/opensans_semibold"
+                android:text="@string/dba_name"
+                android:textColor="@color/black"
+                android:textSize="@dimen/_11ssp" />
+
+            <ImageView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:layout_weight="1"
+                android:scaleType="fitEnd"
+                android:src="@drawable/ic_notifications" />
+        </LinearLayout>
 
         <ScrollView
             android:layout_width="match_parent"
@@ -82,6 +82,157 @@
                 android:layout_height="wrap_content"
                 android:background="@color/et_bg_gray"
                 android:orientation="vertical">
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:orientation="vertical"
+                    android:visibility="visible">
+
+                    <androidx.cardview.widget.CardView
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_marginHorizontal="@dimen/_11sdp"
+                        android:layout_marginTop="@dimen/_11sdp"
+                        android:visibility="visible"
+                        app:cardCornerRadius="@dimen/_10sdp">
+
+                        <LinearLayout
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:background="@color/white"
+                            android:orientation="vertical">
+
+                            <TextView
+                                android:layout_width="match_parent"
+                                android:layout_height="wrap_content"
+                                android:layout_marginStart="@dimen/_10sdp"
+                                android:layout_marginTop="@dimen/_15sdp"
+                                android:fontFamily="@font/opensans_semibold"
+                                android:text="[Business Name] Is Officially Verified!"
+                                android:textColor="@color/primary_black"
+                                android:textSize="@dimen/_12sdp" />
+
+                            <androidx.cardview.widget.CardView
+                                android:layout_width="match_parent"
+                                android:layout_height="wrap_content"
+                                android:layout_marginHorizontal="@dimen/_11sdp"
+                                android:layout_marginTop="@dimen/_7sdp"
+                                android:layout_marginBottom="@dimen/_7sdp"
+                                app:cardCornerRadius="@dimen/_7sdp">
+
+                                <LinearLayout
+                                    android:layout_width="match_parent"
+                                    android:layout_height="wrap_content"
+                                    android:background="@color/at_gray"
+                                    android:orientation="vertical">
+
+                                    <LinearLayout
+                                        android:layout_width="match_parent"
+                                        android:layout_height="wrap_content"
+                                        android:orientation="horizontal"
+                                        android:paddingStart="@dimen/_11sdp"
+                                        android:paddingTop="@dimen/_11sdp"
+                                        android:paddingEnd="@dimen/_11sdp">
+
+                                        <TextView
+                                            android:layout_width="wrap_content"
+                                            android:layout_height="wrap_content"
+                                            android:fontFamily="@font/opensans_semibold"
+                                            android:text="Monthly Volume : "
+                                            android:textColor="@color/light_gray_black"
+                                            android:textSize="@dimen/_11ssp" />
+
+                                        <TextView
+                                            android:layout_width="wrap_content"
+                                            android:layout_height="wrap_content"
+                                            android:fontFamily="@font/opensans_bold"
+                                            android:text="$100,000.00"
+                                            android:textColor="@color/primary_color"
+                                            android:textSize="@dimen/_12ssp" />
+
+                                    </LinearLayout>
+
+                                    <LinearLayout
+                                        android:layout_width="match_parent"
+                                        android:layout_height="wrap_content"
+                                        android:orientation="horizontal"
+                                        android:padding="@dimen/_11sdp">
+
+                                        <TextView
+                                            android:layout_width="wrap_content"
+                                            android:layout_height="wrap_content"
+                                            android:fontFamily="@font/opensans_semibold"
+                                            android:text="High Tickets : "
+                                            android:textColor="@color/light_gray_black"
+                                            android:textSize="@dimen/_11ssp" />
+
+                                        <TextView
+                                            android:layout_width="wrap_content"
+                                            android:layout_height="wrap_content"
+                                            android:fontFamily="@font/opensans_bold"
+                                            android:text="$1,000.00"
+                                            android:textColor="@color/primary_color"
+                                            android:textSize="@dimen/_12ssp" />
+                                    </LinearLayout>
+
+                                </LinearLayout>
+
+                            </androidx.cardview.widget.CardView>
+                            <LinearLayout
+                                android:layout_width="match_parent"
+                                android:layout_height="wrap_content"
+                                android:orientation="horizontal"
+                                android:layout_marginStart="@dimen/_11sdp">
+
+                                <LinearLayout
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:orientation="vertical">
+                                <TextView
+                                    android:layout_width="wrap_content"
+                                    android:layout_height="wrap_content"
+                                    android:layout_weight="1"
+                                    android:text="You may now start sending, receiving,\nbuying, charging, and withdrawing\nCoyni in your token account today."
+                                    android:textSize="@dimen/_11ssp"
+                                    android:fontFamily="@font/opensans_regular"
+                                    android:textColor="@color/primary_black"
+                                    />
+                                <LinearLayout
+                                    android:layout_width="match_parent"
+                                    android:layout_height="wrap_content"
+                                    android:orientation="horizontal"
+                                    android:layout_marginTop="@dimen/_10sdp"
+                                    >
+                                    <TextView
+                                        android:layout_width="wrap_content"
+                                        android:layout_height="wrap_content"
+                                        android:text="Buy Tokens"
+                                        android:textColor="@color/primary_color"
+                                        android:textSize="@dimen/_11ssp"
+                                        android:fontFamily="@font/opensans_semibold"
+                                        />
+                                    <ImageView
+                                        android:layout_width="wrap_content"
+                                        android:layout_height="wrap_content"
+                                        android:src="@drawable/ic_arrowicon"
+                                        android:layout_marginStart="@dimen/_10sdp"
+                                        android:layout_gravity="center"
+                                        />
+                                </LinearLayout>
+                            </LinearLayout>
+                                <ImageView
+                                    android:layout_width="wrap_content"
+                                    android:layout_height="wrap_content"
+                                    android:src="@drawable/ic_identity_verify"
+                                    android:layout_gravity="center"
+                                    />
+
+                             </LinearLayout>
+                        </LinearLayout>
+                    </androidx.cardview.widget.CardView>
+                </LinearLayout>
+
 
                 <LinearLayout
                     android:layout_width="match_parent"
@@ -1533,7 +1684,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:orientation="vertical"
-                    android:visibility="visible">
+                    android:visibility="gone">
 
                     <androidx.cardview.widget.CardView
                         android:layout_width="match_parent"
@@ -1617,11 +1768,13 @@
 
                     </androidx.cardview.widget.CardView>
                 </LinearLayout>
+
                 <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:orientation="vertical"
                     android:visibility="gone">
+
                     <androidx.cardview.widget.CardView
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
@@ -1654,15 +1807,16 @@
                                 android:textAlignment="center"
                                 android:textColor="@color/primary_black"
                                 android:textSize="@dimen/_16sdp" />
+
                             <TextView
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
                                 android:layout_marginTop="@dimen/_20sdp"
+                                android:layout_marginBottom="@dimen/_30sdp"
                                 android:fontFamily="@font/opensans_regular"
                                 android:text="TThe coyni team requires your additional action\n to further verify you."
                                 android:textAlignment="center"
                                 android:textColor="@color/primary_black"
-                                android:layout_marginBottom="@dimen/_30sdp"
                                 android:textSize="@dimen/_11sdp" />
 
                             <LinearLayout
@@ -1694,7 +1848,6 @@
                             </LinearLayout>
 
 
-
                         </LinearLayout>
 
                     </androidx.cardview.widget.CardView>
@@ -1704,7 +1857,5 @@
 
             </LinearLayout>
         </ScrollView>
-
-
     </LinearLayout>
 </RelativeLayout>
