--- a/app/src/main/res/layout/activity_company_information.xml
+++ b/app/src/main/res/layout/activity_company_information.xml
@@ -6,6 +6,7 @@
     android:layout_height="match_parent"
     android:background="@color/white"
     android:orientation="vertical"
+    android:fitsSystemWindows="true"
     android:theme="@style/Theme.MaterialComponents.DayNight.DarkActionBar">
 
     <LinearLayout
@@ -429,7 +430,8 @@
                 <View
                     android:id="@+id/pageOneView"
                     android:layout_width="match_parent"
-                    android:layout_height="@dimen/_200sdp" />
+                    android:layout_height="@dimen/_200sdp"
+                    android:visibility="gone"/>
             </LinearLayout>
 
         </ScrollView>
@@ -850,7 +852,8 @@
                 <View
                     android:id="@+id/pageTwoView"
                     android:layout_width="match_parent"
-                    android:layout_height="@dimen/_200sdp" />
+                    android:layout_height="@dimen/_200sdp"
+                    android:visibility="gone"/>
             </LinearLayout>
 
         </ScrollView>
