--- a/app/src/main/res/layout/activity_quick_action_payor_req.xml
+++ b/app/src/main/res/layout/activity_quick_action_payor_req.xml
@@ -3,8 +3,8 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    tools:context=".view.business.ClearBatchPromptActivity"
+    android:layout_height="match_parent"
+    tools:context=".view.business.QuickActionPayorReqActivity"
     android:orientation="vertical"
     android:background="@drawable/top_rounded_bg">
     <LinearLayout
@@ -21,29 +21,74 @@
                 android:background="@drawable/bg_core_colorfill"
                 android:layout_gravity="center"
                 android:layout_marginTop="@dimen/_13sdp"
-                android:layout_marginBottom="@dimen/_28sdp"/>
+                android:layout_marginBottom="@dimen/_36sdp"/>
         </LinearLayout>
         <TextView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="@string/closing_batch"
+            android:text="@string/paying_dba_name"
             android:textSize="@dimen/_12ssp"
             android:textColor="@color/black"
             android:textAlignment="center"
             android:fontFamily="@font/opensans_semibold"
-            android:layout_marginTop="@dimen/_2sdp"
             android:layout_marginStart="@dimen/_12sdp"
             android:layout_marginEnd="@dimen/_12sdp"/>
+        <ImageView
+            android:layout_width="@dimen/_37sdp"
+            android:layout_height="@dimen/_37sdp"
+            android:layout_marginTop="@dimen/_14sdp"
+            android:contentDescription="@string/done"
+            android:layout_gravity="center"/>
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="horizontal"
-            android:layout_marginTop="@dimen/_7sdp"
             android:gravity="center">
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="6,890.43"
+                android:layout_marginTop="@dimen/_1sdp"
+                android:text="@string/zara"
+                android:textSize="@dimen/_12ssp"
+                android:fontFamily="@font/opensans_semibold"
+                android:textColor="@color/primary_black"/>
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/retail"
+                android:layout_marginStart="@dimen/_5sdp"
+                android:textSize="@dimen/_11ssp"
+                android:textColor="@color/dark_grey"
+                android:fontFamily="@font/opensans_semibold"/>
+        </LinearLayout>
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="@string/account_address_hsdj89378"
+            android:gravity="center"
+            android:textSize="@dimen/_11ssp"
+            android:textColor="@color/dark_grey"
+            android:fontFamily="@font/opensans_semibold"
+            android:layout_marginTop="@dimen/_1sdp"
+            android:layout_marginBottom="@dimen/_16sdp"/>
+        <View
+            android:layout_width="match_parent"
+            android:layout_height="@dimen/_1sdp"
+            android:background="@color/blue_light"
+            android:layout_marginStart="@dimen/_4sdp"
+            android:layout_marginEnd="@dimen/_2sdp"
+            android:visibility="gone"/>
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal"
+            android:layout_marginTop="@dimen/_8sdp"
+            android:gravity="center">
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="160.00"
                 android:fontFamily="@font/opensans_bold"
                 android:textColor="@color/primary_green"
                 android:textSize="@dimen/_35ssp"/>
@@ -54,21 +99,38 @@
                 android:textSize="@dimen/_11ssp"
                 android:textColor="@color/primary_green"
                 android:fontFamily="@font/opensans_bold"
-                android:layout_marginStart="@dimen/_5sdp"/>
+                android:layout_marginStart="@dimen/_5sdp"
+                android:layout_marginTop="@dimen/_7sdp"/>
+            <ImageView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="@dimen/_13sdp"
+                android:src="@drawable/ic_exchange_range"
+                android:contentDescription="@string/done"
+                android:visibility="visible"/>
         </LinearLayout>
+        <View
+            android:layout_width="match_parent"
+            android:layout_height="@dimen/_1sdp"
+            android:background="@color/blue_light"
+            android:layout_marginTop="@dimen/_15sdp"
+            android:layout_marginStart="@dimen/_4sdp"
+            android:layout_marginEnd="@dimen/_2sdp"
+            android:visibility="visible"/>
+
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="horizontal"
-            android:layout_marginTop="@dimen/_21sdp"
+            android:layout_marginTop="@dimen/_14sdp"
             android:layout_marginHorizontal="@dimen/_11sdp"
             android:gravity="center">
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="@string/send_to"
+                android:text="@string/paying_method"
                 android:textSize="@dimen/_11ssp"
-                android:textColor="#505050"
+                android:textColor="@color/dark_grey"
                 android:singleLine="true"
                 android:fontFamily="@font/opensans_regular"
                 android:layout_marginStart="@dimen/_11sdp"
@@ -79,20 +141,51 @@
                 android:orientation="vertical"
                 android:gravity="end"
                 android:layout_marginEnd="@dimen/_11sdp">
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="@string/business_token_account"
-                    android:textSize="@dimen/_11ssp"
-                    android:fontFamily="@font/opensans_semibold"
-                    android:textColor="@color/primary_black"/>
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="@string/available_balance"
-                    android:textSize="@dimen/_9ssp"
-                    android:fontFamily="@font/opensans_semibold"/>
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="@string/business_token_account"
+                        android:textSize="@dimen/_11ssp"
+                        android:fontFamily="@font/opensans_semibold"
+                        android:textColor="@color/primary_black"/>
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="@string/available_balance"
+                        android:textSize="@dimen/_9ssp"
+                        android:textColor="@color/dark_grey"
+                        android:fontFamily="@font/opensans_semibold"/>
             </LinearLayout>
+        </LinearLayout>
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal"
+            android:layout_marginTop="@dimen/_15sdp"
+            android:layout_marginHorizontal="@dimen/_21sdp">
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/recipient_s_address"
+                android:textSize="@dimen/_11ssp"
+                android:fontFamily="@font/opensans_regular"
+                android:textColor="@color/dark_grey"
+                android:layout_weight="1"/>
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Hgj34239274"
+                android:textSize="@dimen/_9ssp"
+                android:textColor="@color/primary_black"
+                android:fontFamily="@font/opensans_semibold"/>
+            <ImageView
+                android:layout_width="@dimen/_9sdp"
+                android:layout_height="@dimen/_11sdp"
+                android:layout_marginStart="@dimen/_6sdp"
+                android:contentDescription="@string/cyn"
+                android:layout_marginTop="@dimen/_2sdp"
+                android:src="@drawable/ic_copy"/>
+
         </LinearLayout>
 
         <androidx.constraintlayout.motion.widget.MotionLayout
@@ -100,9 +193,9 @@
             android:layout_width="match_parent"
             android:layout_height="@dimen/_48sdp"
             android:layout_marginStart="@dimen/_20sdp"
-            android:layout_marginTop="@dimen/_55sdp"
+            android:layout_marginTop="@dimen/_37sdp"
             android:layout_marginEnd="@dimen/_20sdp"
-            android:layout_marginBottom="@dimen/_25sdp"
+            android:layout_marginBottom="@dimen/_21sdp"
             android:background="@drawable/shape_round_rectable"
             android:elevation="@dimen/_2sdp"
             app:layoutDescription="@xml/activity_swipe_unloack_scene"
@@ -126,7 +219,6 @@
                 app:layout_constraintBottom_toBottomOf="@id/im_lock"
                 app:layout_constraintStart_toEndOf="@+id/im_lock"
                 app:layout_constraintTop_toTopOf="@+id/im_lock" />
-
             <androidx.cardview.widget.CardView
                 android:id="@+id/im_lock"
                 android:layout_width="@dimen/_44sdp"
