--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -90,6 +90,7 @@
 
     <color name="notif_delete_bg">#FCE9E8</color>
     <color name="idve_complete">#daeced</color>
+    <color name="cyn_color">#cccccc</color>
 
 
 </resources>
