--- a/app/src/main/res/layout/edit_delete_dialog.xml
+++ b/app/src/main/res/layout/edit_delete_dialog.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
@@ -28,25 +27,22 @@
 
         <ImageView
             android:layout_width="@dimen/_23sdp"
-            android:layout_height="@dimen/_23sdp"
-            android:layout_marginRight="@dimen/_6sdp"
+            android:layout_height="30dp"
+            android:layout_marginEnd="@dimen/_6sdp"
+            android:contentDescription="@string/view_edit"
             android:src="@drawable/ic_edit" />
 
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginLeft="@dimen/_9sdp"
+                android:layout_marginStart="@dimen/_9sdp"
                 android:fontFamily="@font/opensans_semibold"
-                android:text="View/Edit"
+                android:text="@string/view_edit"
                 android:textColor="@color/primary_black"
                 android:textSize="@dimen/_12ssp" />
 
     </LinearLayout>
 
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="vertical">
 
         <View
             android:layout_width="wrap_content"
@@ -55,7 +51,7 @@
             android:layout_marginLeft="@dimen/_24sdp"
             android:layout_marginRight="@dimen/_24sdp"
             android:background="@color/viewcolor" />
-    </LinearLayout>
+
 
     <LinearLayout
         android:id="@+id/receivePaymentLL"
@@ -66,38 +62,34 @@
         android:gravity="center_vertical"
         android:orientation="horizontal"
         android:paddingTop="@dimen/_18sdp"
-        >
+        tools:ignore="UseCompoundDrawables">
 
         <ImageView
             android:layout_width="@dimen/_23sdp"
             android:layout_height="@dimen/_23sdp"
-            android:layout_marginRight="@dimen/_6sdp"
+            android:contentDescription="@string/delete"
+            android:layout_marginEnd="@dimen/_6sdp"
             android:src="@drawable/ic_delete" />
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:fontFamily="@font/opensans_semibold"
-            android:text="Delete"
-            android:layout_marginLeft="9dp"
+            android:text="@string/delete"
+            android:layout_marginStart="9dp"
             android:textColor="@color/error"
             android:textSize="@dimen/_12ssp" />
     </LinearLayout>
 
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginBottom="@dimen/_52sdp"
-        android:orientation="vertical">
 
         <View
             android:layout_width="wrap_content"
             android:layout_height="1dp"
+            android:layout_marginBottom="@dimen/_52sdp"
             android:layout_marginTop="@dimen/_18sdp"
             android:layout_marginLeft="@dimen/_24sdp"
             android:layout_marginRight="@dimen/_24sdp"
             android:background="@color/viewcolor" />
 
-    </LinearLayout>
 
     </LinearLayout>
 
