--- a/app/src/main/res/layout/business_onboarding_open_new_account.xml
+++ b/app/src/main/res/layout/business_onboarding_open_new_account.xml
@@ -12,6 +12,7 @@
         android:paddingEnd="@dimen/_22sdp"
         >
         <ImageView
+            android:id="@+id/imv_close"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginRight="@dimen/_10sdp"
